After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 792622 - "gnome-terminal --preferences" from within gnome-terminal crashes
"gnome-terminal --preferences" from within gnome-terminal crashes
Status: RESOLVED FIXED
Product: gnome-terminal
Classification: Core
Component: general
git master
Other Linux
: High critical
: gnome-3-28
Assigned To: GNOME Terminal Maintainers
GNOME Terminal Maintainers
Depends on:
Blocks:
 
 
Reported: 2018-01-17 23:04 UTC by Egmont Koblinger
Modified: 2018-02-12 18:54 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Egmont Koblinger 2018-01-17 23:04:28 UTC
Inside gnome-terminal:

$ gnome-terminal --preferences
# g_dbus_connection_call_sync_internal: assertion 'object_path != NULL && g_variant_is_object_path (object_path)' failed
Segmentation fault (core dumped)

Luckily it's only the newly started gnome-terminal client that crashes, not the already running server.

Doesn't crash after unsetting GNOME_TERMINAL_SERVICE.
Comment 1 Christian Persch 2018-01-17 23:13:02 UTC
Right, that function doesn't work for service_name being of the ":1.234" form. Need to think how to fix that...
Comment 2 Egmont Koblinger 2018-02-12 12:36:21 UTC
Hack: Maybe simply a g_unsetenv() when a --preferences is seen?
Comment 3 Christian Persch 2018-02-12 18:54:31 UTC
I went for an error message instead of that hack.