client: legacy: Error out when calling --preferences from within gnome-terminal

https://bugzilla.gnome.org/show_bug.cgi?id=792622